--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Nicholas Rogers Portfolio</title>
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="jumbotron row">
+        <div class="col-md-8">
+          <h1>Nicholas Rogers</h1>
+          <h2>Professional Portfolio</h2>
+        </div>
+        <div class="col-md-4">
+          <img src="img/home.jpg" alt="A picture of me"/>
+        </div>
+      </div>
+    </div>
+    <div class="tabs row">
+      <div class="tab col-md-3">
+        <h3 class="about-me">About Me</h3>
+      </div>
+      <div class="tab col-md-3">
+        <h3 class="projects">Projects</h3>
+      </div>
+      <div class="tab col-md-3">
+        <h3 class="about-me">Background</h3>
+      </div>
+      <div class="tab col-md-3">
+        <h3 class="about-me">Hobbies/Interests</h3>
+      </div>
+    </div>
+  </body>
+</html>
