--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
     <div class="tabs row">
       <div class="tab col-md-3">
         <h3 class="about-me">About Me</h3>
+        <a href="about-me.html"><img src="img/aboutme.png" alt="About-me picture icon"/></a>
       </div>
       <div class="tab col-md-3">
         <h3 class="projects">Projects</h3>
+        <a href="projects.html"><img src="img/book.png" alt="Projects picture icon"/></a>
       </div>
       <div class="tab col-md-3">
         <h3 class="about-me">Background</h3>
+        <a href="background.html"><img src="img/business.png" alt="Background-info picture icon"/></a>
       </div>
       <div class="tab col-md-3">
         <h3 class="about-me">Hobbies/Interests</h3>
+        <a href="hobbies.html"><img src="img/game.png" alt="Hobbies picture icon"/></a>
       </div>
     </div>
   </body>
