It will display a complete 'about-me' page with working links and images.

--- a/about-me.html
+++ b/about-me.html
@@ -17,6 +17,16 @@
           <img src="img/home.jpg" alt="A picture of me"/>
         </div>
       </div>
+      <div class="about-content row">
+        <div class="picture col-md-5">
+          <img id="family" src="img/family.jpg" alt="A picture of me and my family"/>
+        </div>
+        <div class="panel panel-success about-text col-md-7">
+          <h3 class="panel panel-heading">About Me</h3>
+          <p class="panel-body">Hi! My name is Nick, I’m 25 and I live in Redmond, WA in the Greater Seattle Area.  I am the son of two engineers and I seem to have inherited their love for problem solving and critical thinking.  I have a mechanical engineering degree but I am equally interested in programming.  Whether it be mechanical engineering, programming, or something in between,  I hope to find somewhere I can fulfill my passion to serve others.</p>
+          <p class="panel-body">As a young adult, I’ve come to learn to value things that are important to me.  I make sure to make time for close friends and family to stay emotionally healthy, as well as stay active, eat regularly, and sleep adequately.  Finally, an about me section wouldn’t be complete without crediting my Christian faith, which is the foundation for who I am.</p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
