--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
       </div>
     </div>
     <div class="tabs row">
-      <div class="tab col-md-3">
-        <h3 class="about-me">About Me</h3>
-        <a href="about-me.html"><img src="img/aboutme.png" alt="About-me picture icon"/></a>
+      <div class="panel panel-success tab col-md-3">
+        <h3 class="panel-heading about-me">About Me</h3>
+        <a class="panel-body row" href="about-me.html"><img src="img/aboutme.png" alt="About-me picture icon"/></a>
+        <p class="panel-body row">Information about me and where I come from.<p>
       </div>
-      <div class="tab col-md-3">
-        <h3 class="projects">Projects</h3>
-        <a href="projects.html"><img src="img/book.png" alt="Projects picture icon"/></a>
+      <div class="panel panel-info tab col-md-3">
+        <h3 class="panel-heading projects">Projects</h3>
+        <a class="panel-body row" href="projects.html"><img src="img/book.png" alt="Projects picture icon"/></a>
+        <p class="panel-body row">A list of my projects with a description and links to GitHub.<p>
       </div>
-      <div class="tab col-md-3">
-        <h3 class="about-me">Background</h3>
-        <a href="background.html"><img src="img/business.png" alt="Background-info picture icon"/></a>
+      <div class="panel panel-warning tab col-md-3">
+        <h3 class="panel-heading background">Background</h3>
+        <a class="panel-body row" href="background.html"><img src="img/man.png" alt="Background-info picture icon"/></a>
+        <p class="panel-body row">My professional and educational background.<p>
       </div>
-      <div class="tab col-md-3">
-        <h3 class="about-me">Hobbies/Interests</h3>
-        <a href="hobbies.html"><img src="img/game.png" alt="Hobbies picture icon"/></a>
+      <div class="panel panel-danger tab col-md-3">
+        <h3 class="panel-heading hobbies">Hobbies/Interests</h3>
+        <a class="panel body row"href="hobbies.html"><img src="img/game.png" alt="Hobbies picture icon"/></a>
+        <p class="panel-body row">Some of the things I like to do on my spare time.<p>
       </div>
     </div>
   </body>
