--- a/background.html
+++ b/background.html
@@ -10,7 +10,8 @@
       <div class="jumbotron row">
         <div class="col-md-8">
           <h1>Nicholas Rogers</h1>
-          <h2>Professional Background</h2>
+          <h2>Background</h2>
+          <a href="index.html"><h2>Back to home</h2></a>
         </div>
         <div class="col-md-4">
           <img src="img/home.jpg" alt="A picture of me"/>
