--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
         <div class="col-md-8">
           <h1>Nicholas Rogers</h1>
           <h2>Projects</h2>
+          <a href="index.html"><h2>Back to home</h2></a>
         </div>
         <div class="col-md-4">
           <img src="img/home.jpg" alt="A picture of me"/>
