--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,61 @@
           <img src="img/home.jpg" alt="A picture of me"/>
         </div>
       </div>
+      <div class="projects-head panel panel-info row">
+        <div class="panel panel-heading">
+          <h3>Projects</h3>
+        </div>
+          <!-- Project 1 -->
+          <div class="new-project panel panel-info row">
+            <div class="panel panel-body">
+              <h4 class="project-name">Resort Website</h4>
+              <ul>
+                <li class="language">Written in HTML</li>
+                <li class="description">This website was created for an island resort to advertise their services and provide ways for customers to contact them and make reservations.</li>
+                <li class="GitHub-link">Link to the GitHub repository <a href="https://github.com/RogersNL/Resort-website">here</a>.</li>
+              </ul>
+            </div>
+          </div>
+          <!-- Project 2 -->
+          <div class="new-project panel panel-info row">
+            <div class="panel panel-body">
+              <h4 class="project-name">Cupcakes Shop Website</h4>
+              <ul>
+                <li class="language">Written in HTML</li>
+                <li class="description">This website was created to advertise a cupcake business.  It includes information about the produc, contact information, and location of stores.</li>
+                <li class="GitHub-link">Link to the GitHub repository <a href="https://github.com/RogersNL/Cupcake">here</a>.</li>
+              </ul>
+            </div>
+          </div>
+          <!-- Project 3 -->
+          <div class="new-project panel panel-info row">
+            <div class="panel panel-body">
+              <h4 class="project-name">Bad Vacation</h4>
+              <ul>
+                <li class="language">Written in HTML</li>
+                <li class="description">This website displays a comical travel booking agency.</li>
+                <li class="GitHub-link">Link to the GitHub repository <a href="https://github.com/RogersNL/bad-vacation">here</a>.</li>
+              </ul>
+            </div>
+          </div>
+      </div>
     </div>
   </body>
 </html>
+
+<!--
+How to add a new project:
+1. Copy the text below into div class="projects-head" (line 20)
+2. Populate the sections marked by *ASTERISKS*
+
+<div class="new-project panel panel-info row">
+  <div class="panel panel-body">
+    <h4 class="project-name">*PROJECT NAME*</h4>
+    <ul>
+      <li class="language">Written in *LANGUAGE*</li>
+      <li class="description">This website... *DESCRIPTION*.</li>
+      <li class="GitHub-link">Link to the GitHub repository <a href="*URL*">here</a>.</li>
+    </ul>
+  </div>
+</div>
+-->
