It will neatly display job experience.  Note added to assist additional job entry.

--- a/background.html
+++ b/background.html
@@ -17,6 +17,90 @@
           <img src="img/home.jpg" alt="A picture of me"/>
         </div>
       </div>
+      <div class="job-experience panel panel-warning row">
+        <div class="job-heading panel-heading">
+          <h3>Job Experience</h3>
+        </div>
+        <div class="job-info panel-body">
+          <ol>
+            <!-- Job 1 -->
+            <li class="job-name"><strong>Electroimpact Inc.</strong>
+              <p class="job-time"><em>July 2015 - January 2018</em></p>
+              <p class="job-title">Mechanical Engineer</p>
+              <p class="job-description">
+                <p>Responsibilities/Experience:</p>
+                <ul>
+                  <li>Design and assembly in airline tooling and automation</li>
+                  <li>CAD (Solidworks, Catia)</li>
+                  <li>Use of forklifts and overhead cranes</li>
+                  <li>Designing for accuracy, longevity, and safety</li>
+                  <li>Hands on assembly with soldering and various power tools</li>
+                </ul>
+              </p>
+            </li>
+            <!-- Job 2 -->
+            <li class="job-name"><strong>Seattle Pacific University Library</strong>
+              <p class="job-time"><em>November 2012 - May 2015</em></p>
+              <p class="job-title">Interlibrary Loans Assistant</p>
+              <p class="job-description">
+                <p>Responsibilities/Experience:</p>
+                <ul>
+                  <li>Pull and process loan requests, shelve returns, and mail books to other libraries</li>
+                  <li>Pay close attention to detail and work with little supervision</li>
+                </ul>
+              </p>
+            </li>
+            <!-- Job 3 -->
+            <li class="job-name"><strong>FUJIFILM Sonosite, Inc.</strong>
+              <p class="job-time"><em>June 2014 - September 2014</em></p>
+              <p class="job-title">Mechanical Engineer Intern</p>
+              <p class="job-description">
+                <p>Responsibilities/Experience:</p>
+                <ul>
+                  <li>Designed, prototyped, and implemented tools for current projects</li>
+                  <li>Conducted several tests and kept organized records and documentation</li>
+                  <li>Gained experience in part drawings, change notices, and deviations</li>
+                  <li>Trained in using an Objet 3D printer, an Instron pull tester, and an ESPEC environmental chamber</li>
+                </ul>
+              </p>
+            </li>
+            <!-- Job 4 -->
+            <li class="job-name"><strong>Kohl's Department Store</strong>
+              <p class="job-time"><em>June 2012 - January 2014</em></p>
+              <p class="job-title">Sales Associate</p>
+              <p class="job-description">
+                <p>Responsibilities/Experience:</p>
+                <ul>
+                  <li>Awarded ‘Employee of the Month’ in September 2013</li>
+                  <li>Recognized by supervisors in writing for positive attitude and strong attention to detail</li>
+                  <li>Maintain large portions of store, process transactions at registers, answer phone calls, unload and replenish merchandise, and train new employees</li>
+                  <li>Able to work well in teams, multitask, work in fast paced environment, and problem solve</li>
+                </ul>
+              </p>
+            </li>
+          </ol>
+        </div>
+      </div>
     </div>
   </body>
 </html>
+
+<!--
+How to add a new job:
+1. Copy the text below into the ordered list under job-info (line 24-25)
+2. Populate information within *ASTERISKS*
+<li class="job-name"><strong>*COMPANY NAME*</strong>
+  <p class="job-time"><em>*DATE WORKED*</em></p>
+  <p class="job-title">*JOB TITLE*</p>
+  <p class="job-description">
+    <p>Responsibilities/Experience:</p>
+    <ul>
+      <li>*FILL*</li>
+      <li>*FILL*</li>
+      <li>*FILL*</li>
+      <li>*FILL*</li>
+    </ul>
+  </p>
+</li>
+
+-->
