It will display education.  Note added to assist additional school entry.

--- a/background.html
+++ b/background.html
@@ -81,6 +81,35 @@
           </ol>
         </div>
       </div>
+      <div class="education-experience panel panel-warning row">
+        <div class="edu-heading panel-heading">
+          <h3>Education</h3>
+        </div>
+        <div class="edu-info panel-body">
+          <ol>
+            <!-- School 1 -->
+            <li class="edu-name"><strong>Epicodus</strong>
+              <p class="edu-time"><em>May 2018 - Present</em></p>
+              <p class="edu-subject">Computer Programming Bootcamp Program</p>
+              <p class="edu-description">Description of Course:</p>
+              <ul>
+                <li>Programming languages:C#, Javascript, and React</li>
+                <li>Pair programming, majority of experience is hands-on</li>
+              </ul>
+            </li>
+            <!-- School 2 -->
+            <li class="edu-name"><strong>Seattle Pacific University</strong>
+              <p class="edu-time"><em>September 2011 - June 2015</em></p>
+              <p class="edu-subject">Bachelor's Degree, Mechanical Engineering</p>
+              <p class="edu-description">Description of Course:</p>
+              <ul>
+                <li>Four year B.S. Mechanical Engineering</li>
+                <li>Graduated June 13, 2015 Cum Laude</li>
+              </ul>
+            </li>
+          </ol>
+        </div>
+      </div>
     </div>
   </body>
 </html>
@@ -103,4 +132,17 @@ How to add a new job:
   </p>
 </li>
 
+How to add a new school:
+1. Copy the text below into the ordered list edu-info (line 88-89)
+2. Populate information with *ASTERISKS*
+
+<li class="edu-name"><strong>*SCHOOL NAME*</strong>
+  <p class="edu-time"><em>*DATE*</em></p>
+  <p class="edu-subject">*SUBJECT*</p>
+  <p class="edu-description">Description of Course:</p>
+  <ul>
+    <li>*FILL</li>
+    <li>*FILL</li>
+  </ul>
+</li>
 -->
