It will display a hobbies page with working float images.

--- a/hobbies.html
+++ b/hobbies.html
@@ -17,6 +17,30 @@
           <img src="img/home.jpg" alt="A picture of me"/>
         </div>
       </div>
+      <div class="hobbies-info panel panel-danger row">
+        <div class="hobbies-head panel-heading">
+          <h3>Hobbies/Interests</h3>
+        </div>
+        <div class="hobbies-text row">
+          <h4>Music</h4>
+          <p><img class="cello-p" src="img/cello.jpg" alt="Me playing cello"/>
+            Music has always been an important part of my life.  I love to listen to a variety of music, all of which is generally positive and uplifting.  I am also a Cellist and I’ve been consistently keeping up with it since I started at age 10.  There almost isn’t a time when I’m not humming a song stuck in my head, singing along to a song on the radio, or jamming with friends.
+          </p>
+        </div>
+        <div class="hobbies-text row">
+          <h4>Gaming</h4>
+          <p>
+            <img class="gaming-p" src="img/game.jpg" alt="Picture gaming"/>
+            From the first time I played a game on the Windows 98 default games, to the first time I received my Gameboy Color, all the way to the time I saved up for a gaming laptop,  video games have been with me.  I can get lost in an adventure, relax in the grind for a goal I have set, or hone my skills to compete with others.  I also follow E-sports and regularly watch the live streams with my friends to cheer on our favorite teams.
+          </p>
+        </div>
+        <div class="hobbies-text row">
+          <h4>Relationships</h4>
+          <p><img class="friends-p" src="img/friends.jpg" alt="Picture of my friends"/>
+            Sometimes it matters more who I am with than what I am doing.  I highly prioritize strong friendships and make sure to invest in them regularly.  Spending quality time, being vulnerable and having strong communication are what makes the relationships that bring the greatest joy, more than any game or song.
+          </p>
+        </div>
+      </div>
     </div>
   </body>
 </html>
