It will properly format for all screen size.  Css is more neat and condensed. Formatting is neat.

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
           <h3>Projects</h3>
         </div>
           <!-- Project 1 -->
-          <div class="new-project panel panel-info row">
+          <div class="new-project ex panel panel-info row">
             <div class="panel panel-body">
               <h4 class="project-name">Resort Website</h4>
               <ul>
@@ -33,7 +33,7 @@
             </div>
           </div>
           <!-- Project 2 -->
-          <div class="new-project panel panel-info row">
+          <div class="new-project ex panel panel-info row">
             <div class="panel panel-body">
               <h4 class="project-name">Cupcakes Shop Website</h4>
               <ul>
@@ -44,7 +44,7 @@
             </div>
           </div>
           <!-- Project 3 -->
-          <div class="new-project panel panel-info row">
+          <div class="new-project ex panel panel-info row">
             <div class="panel panel-body">
               <h4 class="project-name">Bad Vacation</h4>
               <ul>
@@ -64,7 +64,7 @@ How to add a new project:
 1. Copy the text below into div class="projects-head" (line 20)
 2. Populate the sections marked by *ASTERISKS*
 
-<div class="new-project panel panel-info row">
+<div class="new-project ex panel panel-info row">
   <div class="panel panel-body">
     <h4 class="project-name">*PROJECT NAME*</h4>
     <ul>
